global.css
@font-face {
  font-family: Inter;
  src: url("/Inter.ttf") format("ttf");
  font-display: swap;
}

::-webkit-scrollbar {
  width: 5px;
  background-color: #171618;
}

::-webkit-scrollbar-thumb {
  background: #444446;
}

::-webkit-scrollbar-thumb:window-inactive {
  background: #444446;
}

* {
  margin: 0px;
  padding: 0px;
  scroll-behavior: smooth;
  scrollbar-width: thin;
  scrollbar-color: #444446 #171618;
  box-sizing: border-box;
  font-family: Inter !important;
}

body {
  background: #171618;
  box-sizing: border-box;
  color: white;
  justify-content: center;
  align-items: center;
  display: flex;
  overflow-y: scroll;
  padding-bottom: 120px;
}

a {
  text-decoration: none;
}

